# retirement

./: .npmrc  Cargo.toml  build-dev.sh  build-release.sh  build.rs
.github/workflows/: build-release.yml  build-test.yml  update-status.yml
csv/: death_female.csv  death_male.csv  rates.csv
src/: assets.rs  income.rs  lib.rs  life_expectancy.rs  montecarlo.rs  person.rs  rateprovider.rs  rates.rs  taxes.rs  util.rs  withdrawal.rs
tests/: integration.rs  integration1.js
