[package]
name = "retirement"
version = "0.0.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
rand = "0.8.5"
rand_pcg = "0.3.1"
csv = "1.1.6"
serde = { version = "1", features = ["derive"] }
wasm-bindgen = "0.2.82"
getrandom = { version = "0.2.7", features = ["js"] }
wee_alloc = "0.4.5"

[dev-dependencies]
assert_float_eq = "1.1.3"
mockall = "0.11.2"
test-generator = "0.3.0"

[build-dependencies]
csv = "1.1.6"
serde = { version = "1", features = ["derive"] }

[profile.release]
lto = true
opt-level = 'z'